--- a/src/components/CategoryList.module.scss
+++ b/src/components/CategoryList.module.scss
@@ -1,6 +1,9 @@
+@use '../styles/theme';
 
 .heading{
-    font-size: 2rem;
+    font-size: 2rem;    
+    font-family: theme.$primary-font-family;
+
 }
 
 
