--- a/src/components/Product.module.scss
+++ b/src/components/Product.module.scss
@@ -1,9 +1,25 @@
+@use '../styles/theme';
 
+.container{
+    display: flex;
+}
+
+.left{
+    flex-basis: 66%;
+    display: block;
+}
+
+
+.right{
+    flex-basis: 33%;
+    display: block;
+}
 
 
 .title{
     font-size: 1.875rem;
     font-weight: 600;
+    font-family: theme.$primary-font-family;
 
     padding: 0;
     margin: 0;
@@ -12,8 +28,58 @@
 .subtitle{
     font-size: 1.875rem;
     font-weight: 400;
+    font-family: theme.$primary-font-family;
 
     padding: 0;
     margin: 0;
 
+    margin-bottom: 2rem;
+}
+
+.description{
+    font-size: 1rem;
+    font-family: theme.$secondary-font-family;
+}
+
+.attribute{
+    font-size: 1.125rem;
+    font-family: theme.$secondary-font-family;
+
+    margin-bottom: 2rem;
+}
+
+.price_value{
+    margin: 0;
+
+    font-size: 1.75rem;
+    font-family: theme.$primary-font-family;
+
+    font-weight: 700;
+
+    margin-bottom: 2rem;
+
+}
+
+.price{
+    margin: 0;
+
+    font-size: 1rem;
+    font-family: theme.$secondary-font-family;
+
+    font-weight: 700;
+}
+
+.button{
+    padding: 1rem 4rem;
+    border: 0;
+
+    color: theme.$background-color;
+    background-color: theme.$highlight-color;
+
+    margin-bottom: 2rem;
+
+    &:hover{
+        background-color: rgb(33, 184, 99);
+    }
+    
 }
