--- a/src/components/ProductCard.module.scss
+++ b/src/components/ProductCard.module.scss
@@ -17,6 +17,7 @@ a {
     .title {
         font-size: 1.25rem;
         font-weight: 300;
+        font-family: theme.$primary-font-family;
 
         color: theme.$primary-color;
     }
@@ -24,6 +25,7 @@ a {
     .price {
         font-size: 1rem;
         font-weight: 500;
+        font-family: theme.$primary-font-family;
 
         color: theme.$primary-color;
     }
@@ -31,7 +33,5 @@ a {
 
     &:hover {
         box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
-
-
     }
 }
