added cart redux action and reducer

--- a/src/components/Product.module.scss
+++ b/src/components/Product.module.scss
@@ -9,6 +9,14 @@
     display: block;
 }
 
+.default{
+    background-color: red;
+}
+
+.selected{
+    background-color: blue;
+}
+
 
 .right{
     flex-basis: 33%;
