--- a/src/components/Product.module.scss
+++ b/src/components/Product.module.scss
@@ -1,30 +1,24 @@
 @use '../styles/theme';
 
-.container{
+.container {
     display: flex;
 }
 
-.left{
+.left {
     flex-basis: 66%;
     display: block;
 }
 
-.default{
-    background-color: red;
-}
-
-.selected{
-    background-color: blue;
-}
 
 
-.right{
+
+.right {
     flex-basis: 33%;
     display: block;
 }
 
 
-.title{
+.title {
     font-size: 1.875rem;
     font-weight: 600;
     font-family: theme.$primary-font-family;
@@ -33,7 +27,7 @@
     margin: 0;
 }
 
-.subtitle{
+.subtitle {
     font-size: 1.875rem;
     font-weight: 400;
     font-family: theme.$primary-font-family;
@@ -44,19 +38,21 @@
     margin-bottom: 2rem;
 }
 
-.description{
+.description {
     font-size: 1rem;
     font-family: theme.$secondary-font-family;
 }
 
-.attribute{
+.attribute_container {
+
+    margin-bottom: 2rem;
+
     font-size: 1.125rem;
     font-family: theme.$secondary-font-family;
 
-    margin-bottom: 2rem;
 }
 
-.price_value{
+.price_value {
     margin: 0;
 
     font-size: 1.75rem;
@@ -68,7 +64,7 @@
 
 }
 
-.price{
+.price {
     margin: 0;
 
     font-size: 1rem;
@@ -77,7 +73,8 @@
     font-weight: 700;
 }
 
-.button{
+.button {
+
     padding: 1rem 4rem;
     border: 0;
 
@@ -86,9 +83,62 @@
 
     margin-bottom: 2rem;
 
-    &:hover{
+    &:hover {
         background-color: rgb(33, 184, 99);
         cursor: pointer;
     }
-    
+}
+
+.swatch {
+    vertical-align: top;
+
+    display: inline-block;
+    border: 0;
+
+    margin-right: 0.4rem;
+
+    .default {
+        font-size: 1rem;
+        display: inline-block;
+        width: 2rem;
+        height: 2rem;
+        border: 0;
+    }
+
+    .selected {
+        font-size: 1rem;
+        display: inline-block;
+        width: 2rem;
+        height: 2rem;
+        border: 0.1rem solid theme.$highlight-color;
+    }
+}
+
+.attribute {
+    vertical-align: top;
+    display: inline-block;
+
+    border: 0;
+    margin-right: 0.4rem;
+
+    .default {
+        font-size: 1rem;
+
+        display: inline-block;
+        padding: 0.6rem 1rem;
+        width: 5rem;
+        background-color: theme.$background-color;
+        border-color: theme.$primary-color;
+    }
+
+    .selected {
+
+        font-size: 1rem;
+        display: inline-block;
+        padding: 0.6rem 1rem;
+        width: 5rem;
+        background-color: theme.$primary-color;
+        border-color: theme.$background-color;
+        color: theme.$background-color;
+    }
 }
