--- a/src/components/DropdownCurrency.module.scss
+++ b/src/components/DropdownCurrency.module.scss
@@ -1,7 +1,12 @@
+@use '../styles/theme';
+
+
 .currency {
 
     display: inline-block;
+    position: relative;
 
+    align-items: center;
 
     .drop_button {
         background: none;
@@ -11,6 +16,9 @@
         font: inherit;
         cursor: pointer;
         outline: inherit;
+
+        align-items: center;
+
     }
 
 
@@ -19,19 +27,32 @@
     }
 
     &:hover .drop_content {
+
+
         position: absolute;
         display: block;
+        left:-1.375rem;
 
         button {
-            background: none;
+            padding: 1rem 0.2rem; 
+            
+            width: 6rem;
+
             color: inherit;
             border: none;
-            padding: 0;
             font: inherit;
             cursor: pointer;
             outline: inherit;
 
+            background-color: theme.$background-color;
+
             display: block;
+
+            &:hover {
+                padding: 1rem 0.2rem; 
+                background-color: lightgray;
+            }
+
         }
 
         /* Important for vertical align on mobile phones */
