--- a/src/components/Product.module.scss
+++ b/src/components/Product.module.scss
@@ -10,8 +10,6 @@
 }
 
 
-
-
 .right {
     flex-basis: 33%;
     display: block;
@@ -39,8 +37,10 @@
 }
 
 .description {
+
     font-size: 1rem;
     font-family: theme.$secondary-font-family;
+
 }
 
 .attribute_container {
@@ -97,12 +97,16 @@
 
     margin-right: 0.4rem;
 
+
     .default {
+        cursor: pointer;
+
         font-size: 1rem;
         display: inline-block;
         width: 2rem;
         height: 2rem;
-        border: 0;
+        border: 0.125rem solid theme.$background-color;
+
     }
 
     .selected {
@@ -110,7 +114,7 @@
         display: inline-block;
         width: 2rem;
         height: 2rem;
-        border: 0.1rem solid theme.$highlight-color;
+        border: 0.125rem solid theme.$highlight-color;
     }
 }
 
@@ -121,24 +125,24 @@
     border: 0;
     margin-right: 0.4rem;
 
-    .default {
-        font-size: 1rem;
 
+    .default {
+        cursor: pointer;
+
+        font-size: 0.8rem;
         display: inline-block;
         padding: 0.6rem 1rem;
-        width: 5rem;
         background-color: theme.$background-color;
         border-color: theme.$primary-color;
     }
 
     .selected {
 
-        font-size: 1rem;
+        font-size: 0.8rem;
         display: inline-block;
         padding: 0.6rem 1rem;
-        width: 5rem;
         background-color: theme.$primary-color;
-        border-color: theme.$background-color;
+        border-color: theme.$primary-color;
         color: theme.$background-color;
     }
 }
