--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Roboto&display=swap');
 
 $primary-color: #1D1F22;
-$secondary-color: #A6A6A6;
+$secondary-color: #EEEEEE;
 $background-color: #FFFFFF;
 $highlight-color: #5ECE7B;
 
