--- a/src/components/Cart.module.scss
+++ b/src/components/Cart.module.scss
@@ -1,17 +1,9 @@
 @use '../styles/theme';
 
-.cart_title{
-    font-size: 1.875rem;
-            font-weight: 600;
-            font-family: theme.$primary-font-family;
-
-            text-decoration: none;
-            color: theme.$primary-color;
-
-            padding: 0;
-            margin: 0;
-        
-            margin-bottom: 1rem;
+.heading{
+    
+    font-size: 2rem;    
+    font-family: theme.$primary-font-family;
 }
 
 .container {
@@ -159,11 +151,15 @@
 
 .order_button {
 
-    padding: 1rem 8rem;
+    padding: 0.75rem 5rem;
     border: 0;
 
+    font-size: 1rem;
     color: theme.$background-color;
     background-color: theme.$highlight-color;
+    font-family: theme.$primary-font-family;
+
+    font-weight: 600;
 
     margin-bottom: 2rem;
 
