--- a/src/components/CategoryList.module.scss
+++ b/src/components/CategoryList.module.scss
@@ -3,7 +3,6 @@
 .heading{
     font-size: 2rem;    
     font-family: theme.$primary-font-family;
-
 }
 
 
@@ -13,6 +12,8 @@
     justify-content: flex-start;
 
     .item{
-        margin: 0 auto;
+
+        margin-right: 0.825rem;
+        align-self: flex-start;
     }
 }
