--- a/src/components/DropdownCurrency.module.scss
+++ b/src/components/DropdownCurrency.module.scss
@@ -50,7 +50,7 @@
 
             &:hover {
                 padding: 1rem 0.2rem; 
-                background-color: lightgray;
+                background-color: theme.$secondary-color;
             }
 
         }
