formatted code using .prettier config file

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&family=Roboto&display=swap');
 
-$primary-color: #1D1F22;
-$secondary-color: #EEEEEE;
-$background-color: #FFFFFF;
-$highlight-color: #5ECE7B;
+$primary-color: #1d1f22;
+$secondary-color: #eeeeee;
+$background-color: #ffffff;
+$highlight-color: #5ece7b;
 
 $primary-font-family: 'Raleway', sans-serif;
 $secondary-font-family: 'Roboto', sans-serif;
