--- a/src/components/Cart.module.scss
+++ b/src/components/Cart.module.scss
@@ -1,189 +1,39 @@
 @use '../styles/theme';
 
-.heading{
-    
-    font-size: 2rem;    
-    font-family: theme.$primary-font-family;
+.heading {
+  font-size: 2rem;
+  font-family: theme.$primary-font-family;
 }
-
-.container {
-    display: flex;
-
-    flex-wrap: wrap;
-    justify-content: flex-end;
-
-    align-items: stretch;
-    padding: 1rem 0;
-
-    .product {
-        align-self: flex-start;
-        margin-right: auto;
-
-        .title {
-            font-size: 1.875rem;
-            font-weight: 600;
-            font-family: theme.$primary-font-family;
-
-            text-decoration: none;
-            color: theme.$primary-color;
-
-            padding: 0;
-            margin: 0;
-        
-            margin-bottom: 0.5rem;
-        }
-
-        .subtitle{
-            font-size: 1.875rem;
-            font-weight: 400;
-            font-family: theme.$primary-font-family;
-            color: theme.$primary-color;
-
-            
-            padding: 0;
-            margin: 0;
-        
-            margin-bottom: 1rem;
-        }
-
-        .price{
-            margin: 0;
-
-            font-size: 1.75rem;
-            font-family: theme.$primary-font-family;
-        
-            font-weight: 700;
-        
-            margin-bottom: 1rem;
-        }
-    }
-
-    .amount {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        text-align: center;
-
-        font-family: theme.$primary-font-family;
-
-        .amount_button{
-            background-color: theme.$background-color;
-            width: 2.5rem;
-            height: 2.5rem;
-
-            border: solid 2px theme.$primary-color ;
-
-            &:hover{
-                cursor: pointer;
-            }
-
-            &:active{
-                color: theme.$background-color;
-                background-color: theme.$primary-color;
-                border: 0.125rem solid theme.$background-color;
-            }
-        }
-    }
-
-    .gallery {
-
-        .image {
-        }
-    }
-}
-
-.swatch {
-    vertical-align: top;
-
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-    border: 0;
-
-    margin-right: 0.4rem;
-
-    .default {
-        font-size: 0.75rem;
-        display: inline-block;
-        width: 2rem;
-        height: 2rem;
-        border: 0;
-        border: 0.125rem solid theme.$background-color;
-    }
-
-    .selected {
-        font-size: 0.75rem;
-        display: inline-block;
-        width: 2rem;
-        height: 2rem;
-        border: 0.125rem solid theme.$highlight-color;
-    }
-}
-
-.attribute_container{
-
-    font-size: 1.125rem;
-    font-family: theme.$secondary-font-family;
-}
-
-.attribute {
-    vertical-align: top;
-    display: inline-block;
-
-    border: 0;
-    margin: 0;
-    padding: 0;
-    margin-right: 0.4rem;
-
-
-    .default {
-        font-size: 0.75rem;
-
-        display: inline-block;
-        padding: 0.6rem 1rem;
-        background-color: theme.$background-color;
-        border-color: theme.$primary-color;
-    }
-
-    .selected {
-
-        font-size: 0.75rem;
-        display: inline-block;
-        padding: 0.6rem 1rem;
-        background-color: theme.$primary-color;
-        border-color: theme.$primary-color;
-        color: theme.$background-color;
-    }
-}
-
-
 
 .order_button {
+  padding: 0.75rem 5rem;
+  border: 0;
 
-    padding: 0.75rem 5rem;
-    border: 0;
+  font-size: 1rem;
+  color: theme.$background-color;
+  background-color: theme.$highlight-color;
+  font-family: theme.$primary-font-family;
 
-    font-size: 1rem;
+  font-weight: 600;
+
+  margin-bottom: 2rem;
+
+  &:hover {
+    background-color: rgb(33, 184, 99);
+    cursor: pointer;
+  }
+
+  &:active {
+    background-color: theme.$primary-color;
     color: theme.$background-color;
-    background-color: theme.$highlight-color;
-    font-family: theme.$primary-font-family;
-
-    font-weight: 600;
-
-    margin-bottom: 2rem;
-
-    &:hover {
-        background-color: rgb(33, 184, 99);
-        cursor: pointer;
-    }
-
-    &:active{
-        background-color: theme.$primary-color;
-        color: theme.$background-color;
-    }
-
-   
+  }
 }
 
+h1 {
+  font-size: 1.875em;
+}
 
+h2,
+h3 {
+  font-size: 1.75em;
+}
