--- a/src/components/Bag.module.scss
+++ b/src/components/Bag.module.scss
@@ -4,7 +4,6 @@
   display: flex;
 
   flex-wrap: wrap;
-  justify-content: flex-start;
   justify-content: stretch;
 
   padding: 1em 0;
@@ -54,10 +53,7 @@
   .rhs {
     display: flex;
     justify-content: end;
-    flex-basis: 50%;
-    width: fit-content;
-
-    align-items: stretch;
+    flex: 1;
 
     .amount {
       display: flex;
@@ -66,10 +62,10 @@
 
       text-align: center;
 
-      height: inherit;
-
       font-size: 0.75em;
       font-family: theme.$primary-font-family;
+
+      margin-right: 2em;
 
       .amount_button {
         background-color: theme.$background-color;
@@ -92,11 +88,7 @@
 
     .gallery {
       height: 100%;
-
-      .image {
-        height: inherit;
-        max-height: 12em;
-      }
+      width: 40%;
     }
   }
 
@@ -108,7 +100,6 @@
     display: inline-block;
     border: 0;
 
-    margin-bottom: 0.5em;
     margin-right: 0.4em;
 
     .default {
@@ -118,9 +109,11 @@
       height: 2em;
       border: 0;
       border: 0.125rem solid theme.$background-color;
+      margin-bottom: 0.5em;
     }
 
     .selected {
+      margin-bottom: 0.5em;
       font-size: 0.75em;
       display: inline-block;
       width: 2em;
@@ -130,11 +123,12 @@
   }
 
   .attribute_container {
-    font-size: 1.125em;
+    font-size: inherit;
     font-family: theme.$secondary-font-family;
     margin-bottom: 0.25em;
 
     .attribute_name {
+      font-size: 0.75em;
       margin: 0;
       margin-bottom: 0.25em;
     }
@@ -152,12 +146,14 @@
     .default {
       font-size: 0.75em;
 
+      margin-bottom: 0.5em;
       padding: 0.6em 1em;
       background-color: theme.$background-color;
       border-color: theme.$primary-color;
     }
 
     .selected {
+      margin-bottom: 0.5em;
       font-size: 0.75em;
       padding: 0.6em 1em;
       background-color: theme.$primary-color;
