added error handling

--- a/src/components/MiniGallery.module.scss
+++ b/src/components/MiniGallery.module.scss
@@ -14,21 +14,20 @@
   bottom: 0;
   right: 0;
 
-  margin: 0.5em;
   font-size: inherit;
 
   .button {
     background-color: theme.$primary-color;
     opacity: 80%;
     color: theme.$background-color;
-    width: 1.75em;
-    height: 1.75em;
+    width: 1.5em;
+    height: 1.5em;
 
     font-size: 0.75em;
-    font-family: theme.$primary-font-family;
+    font-family: theme.$secondary-font-family;
 
     border: none;
-    margin-left: 0.4em;
+    margin-left: 0.3em;
 
     &:hover {
       cursor: pointer;
@@ -38,7 +37,6 @@
     &:active {
       color: theme.$background-color;
       background-color: theme.$primary-color;
-      border: 0.125rem solid theme.$background-color;
       opacity: 100%;
     }
   }
