--- a/src/components/CartWidget.module.scss
+++ b/src/components/CartWidget.module.scss
@@ -3,6 +3,8 @@
 .container {
   position: relative;
 
+  z-index: 2;
+
   .cart {
     position: relative;
     .quantity {
@@ -12,16 +14,16 @@
       background-color: theme.$primary-color;
       width: 1rem;
       height: 1rem;
-      padding-top: 0.1rem;
       border-radius: 50%;
       text-align: center;
       position: absolute;
 
       right: -0.8em;
-      top: -0.8em;
+      top: -0.6em;
+      padding-top: 0.2em;
     }
     .icon {
-      padding-top: 0.3em;
+      padding-top: 0.25em;
     }
   }
 
@@ -37,11 +39,17 @@
     }
 
     .dropdown_container {
-      margin: 0 2rem;
+      margin: 0 1rem;
 
       display: block;
       align-items: left;
       text-align: left;
+
+      .bag {
+        overflow: auto;
+        max-height: 24em;
+        margin-bottom: 1em;
+      }
 
       .heading {
         font-size: 1.125em;
@@ -52,6 +60,7 @@
         justify-content: space-between;
 
         gap: 3em;
+        margin-bottom: 2em;
 
         .button_primary {
           width: 100%;
