--- a/src/components/DropdownCurrency.module.scss
+++ b/src/components/DropdownCurrency.module.scss
@@ -26,6 +26,9 @@
     position: absolute;
     display: block;
     left: -1.375rem;
+    padding-top: 0.8em;
+
+    filter: drop-shadow(0px 4px 35px rgba(168, 172, 176, 0.19));
 
     button {
       padding: 1rem 0.2rem;
