--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -13,10 +13,21 @@
   top: -1rem;
   padding: 0rem 6rem;
   height: 5rem;
-  width: 99%;
+  width: 100%;
   background-color: theme.$background-color;
+  z-index: 3;
+}
 
-  z-index: 2;
+.highlight_overlay {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+
+  z-index: 1;
 }
 
 .navbar {
