--- a/src/pages/category/CategoryList.module.scss
+++ b/src/pages/category/CategoryList.module.scss
@@ -11,7 +11,8 @@
   justify-content: flex-start;
 
   .item {
-    margin-right: 0.825rem;
+    margin-right: 1rem;
+    margin-bottom: 2rem;
     align-self: flex-start;
   }
 }
