--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -69,7 +69,7 @@
     display: flex;
     flex: 4;
     text-align: right;
-    justify-content: end;
+    justify-content: flex-end;
 
     font-family: theme.$primary-font-family;
     gap: 2rem;
